# GO_IT_courses

./: .gitignore  main.py
goit-algo-hw-03/: README.md
goit-algo-hw-04/: README.md
goit-algo-hw-04/Task_1/: main.py
goit-algo-hw-04/Task_1/data_processing/: process.py
goit-algo-hw-04/Task_1/validators/: validators.py
goit-algo-hw-04/Task_2/: main.py
goit-algo-hw-04/Task_2/data_processing/: process.py
goit-algo-hw-04/Task_2/validators/: validators.py
goit-algo-hw-04/Task_3/: main.py
goit-algo-hw-04/Task_4/: main.py
goit-algo-hw-04/Task_4/contacts/: contacts_interaction.py
goit-algo-hw-05/Task_1/: main.py
goit-algo-hw-05/Task_2/: main.py
goit-algo-hw-05/Task_3/: main.py
goit-algo-hw-05/Task_4/: main.py
goit-algo-hw-05/Task_4/contacts/: contacts_interaction.py
goit-algo-hw-06/: main.py
goit-core-hw-07/: main.py
goit-core-hw-08/: main.py
goit-ds-hw-01/: .dockerignore  Dockerfile  addressbook.pkl  main.py  pyproject.toml
goit-ds-hw-02/: README.md  Script.sql  contact_book_db  create_task_db.db  create_task_db.py  create_task_db.sql  fill_data_db.py  main.py  pyproject.toml  queries.sql  salary.db  seed.py
goit-ds-hw-023/: main.py  pyproject.toml
goit-ds-hw-023/task_1/: main.py  pyproject.toml
goit-ds-hw-023/task_2/: Dockerfile  main.py  pyproject.toml
goit-ds-hw-04/: Hw1.ipynb  pyproject.toml
goit-ds-hw-05/: HW2.3.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  pyproject.toml  python_data.csv
goit-ds-hw-06/: 1 EDA.ipynb  2 Custom_linear_regression.ipynb  3 Scikit_learn_n_analyitcal_linear_regression.ipynb  main.ipynb  std_scaler.joblib  utils.py
goit-ds-hw-06/data/: 2 test_raw.csv  2 train_raw.csv  3 test_post_EDA.csv  3 train_post_EDA.csv
goit-ds-hw-07/: utils.py
goit-ds-hw-08/: 1 EDA.ipynb  2 Training.ipynb  utils.py
goit-ds-hw-08/data/: 2 x_test_raw.csv  2 y_test_raw.csv  2 y_train_raw.csv  3 df_test_post_EDA.csv  3 df_train_post_EDA.csv
goit-ds-hw-09/: main_2d.ipynb  main_mnist.ipynb  utils.py
