[project]
name = "goit-ds-hw-02"
version = "0.1.0"
description = ""
authors = [
    {name = "jackyurchiksparrow",email = "uradzbq@gmail.com"}
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "faker (>=40.15.0,<41.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
