[project]
name = "goit-ds-hw-04"
version = "0.1.0"
description = ""
authors = [
    {name = "jackyurchiksparrow",email = "uradzbq@gmail.com"}
]
requires-python = ">=3.11, <4.0"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
