[project]
name = "goit-ds-hw-05"
version = "0.1.0"
description = ""
authors = [
    {name = "jackyurchiksparrow",email = "uradzbq@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "html5lib (>=1.1,<2.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
