[project]
name = "task-2"
version = "0.1.0"
description = ""
authors = [
    {name = "jackyurchiksparrow",email = "uradzbq@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pymongo (>=4.17.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
